hphp/test/zend/bad/ext/gd/tests/imagestring_error4.php
<?php
$image = imagecreatetruecolor(180, 30);
$result = imagestring($image, 1, 'string', 5, 'String', 1);

?>